Fix section three spacing and font-size

--- a/styles.css
+++ b/styles.css
@@ -125,9 +125,10 @@ ul{
 }
 .section-three{
    background-color: #E5E7EB;
-   padding: 120px 180px; 
+   padding: 120px 140px; 
    display: flex;
    flex-direction: column;
+   gap: 20px;
 }
 
 .quote{
@@ -140,7 +141,7 @@ ul{
     font-weight: bold;
     align-self: flex-end;
     color: #1F2937;
-    font-size: 18px;
+    font-size: 24px;
 }
 .section-four{
     display:flex;
